<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.AccountPage">

    <Button
        android:id="@+id/paidArticlesButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="paidArticles"
        android:text="@string/paid_articles_button"
        app:layout_constraintEnd_toEndOf="@+id/myArticlesButton"
        app:layout_constraintStart_toStartOf="@+id/myArticlesButton"
        app:layout_constraintTop_toBottomOf="@+id/myArticlesButton" />

    <Button
        android:id="@+id/myArticlesButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="myArticles"
        android:text="@string/my_articles_button"
        app:layout_constraintEnd_toEndOf="@+id/createDocButton"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/createDocButton"
        app:layout_constraintTop_toBottomOf="@+id/createDocButton" />

    <ImageView
        android:id="@+id/userPicture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:contentDescription="@string/user_picture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/user" />

    <TextView
        android:id="@+id/usernameField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:gravity="center"
        android:text="@string/user_name"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/userPicture"
        app:layout_constraintHorizontal_bias="0.528"
        app:layout_constraintStart_toStartOf="@+id/userPicture"
        app:layout_constraintTop_toBottomOf="@+id/userPicture" />

    <Button
        android:id="@+id/createDocButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="createDocumentButon"
        android:text="@string/create_doc_button"
        app:layout_constraintEnd_toEndOf="@+id/userPicture"
        app:layout_constraintStart_toStartOf="@+id/userPicture"
        app:layout_constraintTop_toBottomOf="@+id/usernameField" />

    <Button
        android:id="@+id/logOutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:onClick="logOut"
        android:text="@string/log_out_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/backtoSearch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="backToSearchOnClick"
        android:text="@string/back_to_search_button"
        app:layout_constraintEnd_toEndOf="@+id/paidArticlesButton"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="@+id/paidArticlesButton"
        app:layout_constraintTop_toBottomOf="@+id/paidArticlesButton" />

</androidx.constraintlayout.widget.ConstraintLayout>